2014-06-28, S3QL 2.9

  * Fix crash when using swift backend and server uses an
    authentication URL other than /v1.0.

  * Fixed two test failures when running unit tests as root.

  * Fixed problems when receiving an HTTP error without a well-formed
    XML body from the remote server (this may happen e.g. due to
    failure in a transparent proxy or load balancer).

  * S3QL now depends on the defusedxml Python module
    (https://pypi.python.org/pypi/defusedxml/).

  * S3QL is no longer vulnerable to DOS attacks from malicious backend
    servers. Previously, a malicious server could induce S3QL to
    consume arbitrary amounts of memory by recursive XML entity
    expansion.

  * S3QL now supports Google OAuth2 authentication. To use it, specify
    'oauth2' as backend login, and a valid OAuth2 refresh token as
    backend password. To obtain the refresh token, the (new)
    s3ql_oauth_client command may be used.

  * S3QL now requires version 3.1 or newer of the dugong module.

  * In some cases, transmission errors when reading storage objects
    from a backend may have been misreported as corrupted backend
    objects. This has been fixed.

  * S3QL no longer crashes when data corruption occurs in the first
    few bytes of an LZMA compressed storage object.

  * S3QL now honors the "Retry-After" HTTP header when receiving an
    XML error from a storage server.

  * Fixed a crash that could occur when the remote server (or some
    intermediate proxy) sends a non-XML error response.

  * mount.s3ql and fsck.s3ql now use different exit codes to indicate
    different failure conditions.

2014-03-29, S3QL 2.8.1

  * No changes in S3QL itself.

  * The S3QL 2.8 tarball accidentally included a copy of the Python
    dugong module. This has been fixed in the 2.8.1 release.

2014-03-13, S3QL 2.8

  * Fixed various problems with using a proxy server.

  * Sending SIGUSR1 to mount.s3ql now generates a stacktrace
    (debugging feature).
