@@ -34,7 +34,7 @@ def parse_args(args):
 
     parser.add_cachedir()
     parser.add_authfile()
-    parser.add_debug_modules()
+    parser.add_debug()
     parser.add_quiet()
     parser.add_ssl()
     parser.add_version()
